# logseq-matryca-parser

./: .cursorignore  .cursorrules  .gitignore  .gitnexusrc  .pre-commit-config.yaml  .repomixignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP_AGENT_NATIVE_XRAY.md  ROADMAP_CLI_HYDRATION_AND_ENRICHMENT.md  ROADMAP_CONTEXT_SYNTHESIS_AND_SCOPING.md  ROADMAP_GRAPH_RAG_SEMANTICS.md  ROADMAP_HEADLESS_WRITER.md  ROADMAP_INCREMENTAL_WATCHER.md  ROADMAP_INLINE_SHIELD_AND_NAMESPACES.md  ROADMAP_OBSIDIAN_ADAPTER.md  ROADMAP_ROBUSTNESS_AND_SOFT_BREAKS.md  ROADMAP_UUID_AND_GRAPH_SUPERPOWERS.md  SECURITY.md  index.html  pyproject.toml  readme.md  repomix-output-parser.xml
.claude/skills/gitnexus-logseq-parser/: SKILL.md
.cursor/rules/: domain-logic.mdc  git-standards.mdc  python-standards.mdc  testing.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  clean_arch_issue_numbers.txt  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  clean_architecture.yml  config.yml  feature_request.yml
.github/scripts/: create_clean_arch_issues.sh  create_good_first_issues.sh
.github/workflows/: ci.yml  codeql.yml  daily-metrics.yml  github_release.yml  pypi_publish.yml  python-app.yml
claude-skill-logseq-read/: SKILL.md
claude-skill-logseq-read/scripts/: parse_logseq.py
docs/: 20260425 Logseq Temporal Ontology Specification.md  ARCHITECTURE.md  ARCHITECTURE_BLUEPRINT.md  BUG_HUNT_REPORT.md  CLEAN_CODE_ARCHITECTURE.md  CODEQL.md  CODE_SCAFFOLD.md  COOKBOOK.md  GOOD_FIRST_ISSUES.md  LOGSEQ_ASSET_RESOLUTION_SPEC.md  LOGSEQ_DATASCRIPT_MAPPING.md  OFFICIAL_MLDOC_SPECS.md  README.md  REFERENCE_SPEC.md  RELEASE_PROCESS.md  error_log.md  logseq_ast_primer.md
docs/design-docs/: ARCHITECTURE_BLUEPRINT.md  CODE_SCAFFOLD.md  LOGSEQ_ASSET_RESOLUTION_SPEC.md  LOGSEQ_DATASCRIPT_MAPPING.md  LOGSEQ_TEMPORAL_ONTOLOGY.md  OFFICIAL_MLDOC_SPECS.md  README.md  REFERENCE_SPEC.md
docs/internal/: LOCAL_CODE_STUDY.md  STATIC_ANALYSIS_POLICY.md
docs/quality/: CLEAN_ARCH_BACKLOG.md  GITHUB_CLEAN_ARCH_ROADMAP.md  ISSUE_TRIAGE_2026-07.md  README.md
docs/rfc/: OLLAMA_RAG.md
docs/roadmaps/: ROADMAP_EMBED_EXPANSION_AND_FLUENT_QUERIES.md  ROADMAP_INCREMENTAL_WATCHER.md  ROADMAP_TOML_FIX_AND_PYPI_DISTRIBUTION.md  ROADMAP_UUID_AND_GRAPH_SUPERPOWERS.md
examples/: demo_logseq_journal.md  run_demo.py
legacy/: local_digestor.py
metrics/: history.json  index.json
metrics/quarters/: 2026-Q2.json  2026-Q3.json
scripts/: archive_repository_metrics.py  check_vendor_free_docs.sh  debug_pre_release.py  extract_changelog.py  gitnexus-analyze-embeddings.sh
src/logseq_matryca_parser/: LICENSE  NOTICE  __init__.py  __main__.py  agent_press.py  agent_writer.py  exceptions.py  forge.py  graph.py  kinetic.py  kinetic_commands.py  kinetic_export.py  lens.py  logos_core.py  logos_parser.py  logseq_markdown.py  logseq_paths.py  synapse.py  synapse_embed.py
tests/: test_agent_press.py  test_agent_writer.py  test_archive_repository_metrics.py  test_exceptions.py  test_extract_changelog.py  test_forge.py  test_graph.py  test_kinetic.py  test_layer_boundary.py  test_lens.py  test_logos_parser.py  test_logseq_markdown.py  test_logseq_paths.py  test_package_version.py  test_pre_release_roundtrip.py  test_synapse.py
