[project]
name = "logseq-matryca-parser"
version = "0.1.0"
description = "The Logos Protocol: Deterministic Logseq AST parsing for Matryca.ai."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Marco Porcellato", email = "marco@matryca.ai" }
]
keywords = [
    "logseq", 
    "ast", 
    "parser", 
    "ai", 
    "rag", 
    "knowledge-graph"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.1"
]

[project.urls]
"Homepage" = "https://github.com/MarcoPorcellato/logseq-matryca-parser"
"Bug Tracker" = "https://github.com/MarcoPorcellato/logseq-matryca-parser/issues"
"Matryca.ai" = "https://matryca.ai"

[project.scripts]
matryca-parse = "logseq_matryca_parser.kinetic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
