[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logseq-matryca-parser"
version = "1.1.1"
description = "The Logos Protocol: Deterministic Logseq AST parsing for Matryca.ai."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Marco Porcellato", email = "marco@matryca.ai" },
]
keywords = [
    "logseq",
    "ast",
    "parser",
    "ai",
    "rag",
    "knowledge-graph",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.1",
]

[project.optional-dependencies]
viz = [
    "networkx>=3.0.0",
    "pyvis>=0.3.2",
]
ai = [
    "langchain-core",
    "llama-index-core",
]
all = [
    "networkx>=3.0.0",
    "pyvis>=0.3.2",
    "langchain-core",
    "llama-index-core",
]
watch = [
    "watchdog>=4.0.0",
]

[project.scripts]
matryca-parse = "logseq_matryca_parser.kinetic:app"

[project.urls]
Homepage = "https://github.com/MarcoPorcellato/logseq-matryca-parser"
"Bug Tracker" = "https://github.com/MarcoPorcellato/logseq-matryca-parser/issues"
"Matryca.ai" = "https://matryca.ai"

[dependency-groups]
dev = [
    "logseq-matryca-parser[all,watch]",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "watchdog.*",
]
ignore_missing_imports = true
