[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logseq-matryca-parser"
version = "1.5.0"
description = "The Logos Protocol: Deterministic Logseq AST parsing for Matryca.ai."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Marco Porcellato", email = "marco@matryca.ai" },
]
keywords = [
    "logseq",
    "ast",
    "parser",
    "ai",
    "rag",
    "knowledge-graph",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.1",
]

[project.optional-dependencies]
viz = [
    "networkx>=3.0.0",
    "pyvis>=0.3.2",
]
ai = [
    "langchain-core",
    "llama-index-core",
]
all = [
    "networkx>=3.0.0",
    "pyvis>=0.3.2",
    "langchain-core",
    "llama-index-core",
]
watch = [
    "watchdog>=4.0.0",
]

[project.scripts]
matryca-parse = "logseq_matryca_parser.kinetic:app"

[project.urls]
Homepage = "https://github.com/MarcoPorcellato/logseq-matryca-parser"
Repository = "https://github.com/MarcoPorcellato/logseq-matryca-parser"
Source = "https://github.com/MarcoPorcellato/logseq-matryca-parser"
Documentation = "https://github.com/MarcoPorcellato/logseq-matryca-parser/tree/main/docs"
Changelog = "https://github.com/MarcoPorcellato/logseq-matryca-parser/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/MarcoPorcellato/logseq-matryca-parser/issues"
"Matryca.ai" = "https://matryca.ai"

[dependency-groups]
dev = [
    "logseq-matryca-parser[all,watch]",
    "mypy>=1.20.2",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.14.1",
]
override-dependencies = [
    "nltk @ git+https://github.com/nltk/nltk@v3.10.0-rc1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/logseq_matryca_parser"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "watchdog.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["legacy", "examples", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/logseq_matryca_parser/kinetic.py" = ["B008"]
"tests/**" = ["SIM117"]
